# rapid

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
doc/semantics/: axiomatic_semantics.tex  main.aux  main.tex  operational_semantics.tex  preamble.tex  trace_lemmas.tex  while.sty  while.tex
examples/ahmed/: benchmark18_conjunctive.spec  conditional_conj.spec  list_in_loop.smt2  list_reversal.smt2  list_test.spec  loop.spec  mem_safety_1.spec  mem_safety_2.spec  nth_item.smt2  pointers1.spec  pointers2.spec  pointers3.spec  pointers5.spec  pointers_and_2_loops.spec  pointers_and_loops1.spec  pointers_and_loops2.spec  pointers_and_loops3.spec  pointers_and_loops_nested.spec  random.spec  scope_test.spec  simle_test.spec  simple_search_value.spec  sll2n_update_all.spec  sll_remove_all.spec  struct_test.spec  swap.spec  swap_arrays.spec  test_bed2.spec  test_bed3.spec  test_bed4.spec
examples/arrays/: add_and_subtract.spec  atleast_one_iteration.spec  both_or_none.spec  check_equal_set_flag.spec  collect_indices_equal_values.spec  copy.spec  copy_absolute.spec  copy_and_add.spec  copy_nonzero.spec  copy_partial.spec  copy_positive.spec  copy_two_indices.spec  count_down.spec  eq.spec  eureka08.spec  eureka11.spec  eureka14.spec  find1.spec  find2.spec  find_max.spec  find_max_from_second.spec  find_max_local.spec  find_max_up_to.spec  find_min.spec  find_min_local.spec  find_min_up_to.spec  find_sentinel.spec  in_place_max.spec  increment_by_one.spec  increment_by_one_harder.spec  indexn_is_arraylength.spec  init.spec  init_conditionally.spec  init_non_constant.spec  init_non_constant_easy.spec  init_partial.spec  init_previous_plus_one.spec  init_previous_plus_one_alternative.spec  insertion_sort.spec  max_prop.spec  (+15 more)
examples/arrays_new_format/: atleast_one_iteration.spec  both_or_none.spec  check_equal_set_flag.spec  collect_indices_equal_values.spec  copy.spec  copy_absolute.spec  copy_nonzero.spec  copy_partial.spec  copy_positive.spec  copy_two_indices.spec  find1.spec  find2.spec  find_max.spec  find_max_from_second.spec  find_max_local.spec  find_max_up_to.spec  find_min.spec  find_min_local.spec  find_min_up_to.spec  find_sentinel.spec  in_place_max.spec  increment_by_one.spec  increment_by_one_harder.spec  indexn_is_arraylength.spec  init.spec  init_conditionally.spec  init_non_constant.spec  init_non_constant_easy.spec  init_partial.spec  init_previous_plus_one.spec  init_previous_plus_one_alternative.spec  insertion_sort.spec  max_prop.spec  merge_interleave.spec  min_prop.spec  partition-harder.spec  partition.spec  push_back.spec  reverse.spec  set_to_one.spec  (+5 more)
examples/arrays_unsat/: add_and_subtract.spec  atleast_one_iteration.spec  both_or_none.spec  check_equal_set_flag.spec  collect_indices_equal_values.spec  copy.spec  copy_absolute.spec  copy_nonzero.spec  merge_interleave.spec  (+2 more)
parser_generator/: Makefile  WhileParser.yy  WhileScanner.ll
src/: main.cpp  test.cpp
src/analysis/: AnalysisPreComputation.cpp  AnalysisPreComputation.hpp  AssertAssumeProcessor.cpp  AssertAssumeProcessor.hpp  CMakeLists.txt  GenerateMemConjectures.cpp  GenerateMemConjectures.hpp  InvariantGenerator.cpp  InvariantGenerator.hpp  LemmasIterators.cpp  LemmasIterators.hpp  LemmasOther.cpp  LemmasOther.hpp  LemmasTwoTraces.cpp  LemmasTwoTraces.hpp  LemmasVariableDiffs.cpp  LemmasVariableDiffs.hpp  LemmasVariableValues.cpp  LemmasVariableValues.hpp  ProgramTraverser.cpp  ProgramTraverser.hpp  Semantics.cpp  Semantics.hpp  SemanticsHelper.cpp  SemanticsHelper.hpp  SemanticsInliner.cpp  SemanticsInliner.hpp  TheoryAxioms.cpp  TheoryAxioms.hpp  TraceLemmas.cpp  TraceLemmas.hpp
src/program/: CMakeLists.txt  Expression.cpp  Expression.hpp  Program.cpp  Program.hpp  Statements.cpp  Statements.hpp  SymbolDeclarations.cpp  SymbolDeclarations.hpp  ValueType.cpp  ValueType.hpp  Variable.cpp  Variable.hpp
src/solvers/: CMakeLists.txt  SolverInterface.cpp  SolverInterface.hpp
(+405 files in other folders)
